[package]
name = "iroh-conn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
blake3 = "1.7.0"
derive_more = { version = "2.0.1", features = ["full"] }
futures = "0.3.31"
iroh = { version = "0.33.0", features = ["discovery-local-network"] }
n0-future = "0.1.2"
tokio = "1.44.1"
tokio-util = "0.7.14"
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
iroh-conn = { path = ".", features = ["testing"] }

[features]
testing = []
