[package]
name = "iroh-conn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
blake3 = "1.7.0"
derive_more = { version = "2.0.1", features = [
  "debug",
  "deref",
  "display",
  "from",
] }
futures = "0.3.31"
iroh = { version = "0.34.0" }
n0-future = "0.1.2"
tokio = "1.44.1"
tokio-util = "0.7.14"
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

polestar = { git = "https://github.com/maackle/polestar-rs", optional = true }

[dev-dependencies]
iroh-conn = { path = ".", features = ["testing"] }

[features]
default = ["modeling", "testing"]
modeling = ["polestar"]
testing = []
